--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^1.6.7",
     "icons": "^1.0.0",
     "react": "^18.2.0",
