--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "atob": "^2.1.2",
     "axios": "^1.6.7",
     "icons": "^1.0.0",
+    "mock-aws-s3": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
