--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,12 +1,20 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
+      {
+        "src": "api/**/*.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "next.config.js",
+        "use": "@vercel/next"
+      }
     ],
     "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "/"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      }
     ]
   }
+  
