--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,20 +1,6 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "next.config.js",
-        "use": "@vercel/next"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      }
+   "rewrites":  [
+       {"source": "/(.*)", "destination": "/"}
     ]
-  }
+}
   
